<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mydrawer"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dev_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/oneui_grey_back">

        <include
            android:id="@+id/dev_toolbar"
            layout="@layout/app_toolbar">

        </include>


        <TextView
            android:id="@+id/developers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/devlopers"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_dev1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developers_text">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/dev1_main_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/pranjal"
                    android:transitionName="dev_image_transition"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dev1_main_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/developername1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="dev_name_transition"
                    app:layout_constraintStart_toEndOf="@+id/dev1_main_img"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dev1_main_descc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dev1_desc"
                    android:textColor="@color/black"
                    android:transitionName="dev_desc_transition"
                    app:layout_constraintStart_toEndOf="@+id/dev1_main_img"
                    app:layout_constraintTop_toBottomOf="@+id/dev1_main_name" />

                <TextView
                    android:id="@+id/dev_click_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/dev_click"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dev1_main_img" />

            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_dev2"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@+id/card_dev1">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/dev2_main_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/abhi_dp"
                    android:transitionName="dev_image_transition"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dev2_main_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/developername2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="dev_name_transition"
                    app:layout_constraintStart_toEndOf="@+id/dev2_main_img"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dev2_main_descc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dev2_desc"
                    android:textColor="@color/black"
                    android:transitionName="dev_desc_transition"
                    app:layout_constraintStart_toEndOf="@+id/dev2_main_img"
                    app:layout_constraintTop_toBottomOf="@+id/dev2_main_name" />

                <TextView
                    android:id="@+id/dev2_click_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/dev_click"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dev2_main_img" />

            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>